Try to fix the blue buttons on iOS

--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,7 @@ a:visited {
 button.primary {
   background-color: var(--link-color) !important;
 }
+
+button {
+  color: #000;
+}
